REGRESSION(r287021): [EME][Thunder] Build broken https://bugs.webkit.org/show_bug.cgi?id=234434

Patch by Philippe Normand <pnormand@igalia.com> on 2021-12-22
Reviewed by Xabier Rodriguez-Calvar.

Fix build, simplify a bit the parsing of message payloads.

* platform/graphics/gstreamer/eme/CDMThunder.cpp:
(WebCore::CDMInstanceThunder::setServerCertificate):
(WebCore::ParsedResponseMessage::ParsedResponseMessage):
(WebCore::CDMInstanceSessionThunder::errorCallback):
(WebCore::CDMInstanceSessionThunder::requestLicense):
(WebCore::CDMInstanceSessionThunder::updateLicense):
(WebCore::CDMInstanceSessionThunder::loadSession):


Canonical link: https://commits.webkit.org/245492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287350 268f45cc-cd09-0410-ab3c-d52691b4dbfc